1999-04-29  Jim Kingdon  <http://www.cyclic.com>

	* run.c (piped_child): Make the error messages more verbose.
	(close_on_exec): Reindent.
	* sanity.sh (devcom3): Several errors are possible in devcom3-9a.
	Adjust for change to piped_child error message.

1999-04-28  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (devcom3): Add some tests of the CVS/Notify file and
	disconnected "cvs edit".

	* main.c (opt_usage): Remove -b.

1999-04-20 Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>

	* rcs.c (RCS_delete_revs):  RCS_delete_revs uses an
	RCS_checkout call to get a new copy of a revision to be
	used internally after old revisions were deleted and it was
	performing keyword substitutions.  This munged all the
	the revisions of the file on the branch containing the
	deleted revisions and its sub-branches, as the original they
	were being patched from was incorrect.  Corrected this by
	passing in "-ko" as an option to RCS_checkout.
	* sanity.sh (keywordlog):  modified this test to verify the
	correct behavior of 'cvs admin -o'.
	[Fixed use of \$ in keywordlog test; added code in RCS_delete_revs
	to abort on binary file on Windows -kingdon]

1999-04-21  Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>
	and Jim Kingdon

	* tag.c (tag_check_valid): A bug was causing CVS to spin
	indefinately when -j:<date> was specified.  CVS now returns
	an error.
	* sanity.sh: Added a test (tagdate-12) to test this.

1999-04-19  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (backuprecover): Clean up the repository at the end.

1999-04-18  Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>

	* sanity.sh added a test (backuprecover) to test cvs behavior
	with a repository that is out of date relative to the
	developer's workspaces.
	[Fix --keep code; move test to "Repository Storage" section since
	it doesn't really exercise the diff/diff3 library. -kingdon]

1999-04-13  Derek Price