@@ -1,5 +1,8 @@
 1999-04-29  Jim Kingdon  <http://www.cyclic.com>
 
+	* sanity.sh: If invoked without any arguments, print a usage
+	message.
+
 	* run.c (piped_child): Make the error messages more verbose.
 	(close_on_exec): Reindent.
 	* sanity.sh (devcom3): Several errors are possible in devcom3-9a.
